# OrbitAI

./: Makefile  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md
.github/workflows/: backend-build.yml  backend-pr.yml  depend-build.yml  docs-autocorrect.yml  docs-build.yml  docs-deploy.yml  frontend-build.yml  helm-chart-publish.yml  helm-chart-validate.yml  storage-build.yml
backend/: .dockerignore  .gitlab-ci.yml  Dockerfile  Dockerfile.compose  Makefile  README.md  README.zh-CN.md  go.mod  storage-server.Dockerfile
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/etc/: example-config.yaml
backend/hack/: checkpoint_restore_multiframework_train.py  checkpoint_restore_real_framework_train.py  checkpoint_restore_realistic_train.py  export_statistic.go  helm-current-version.sh  install-nerdctl.sh  web-backend-token-secret.yml
backend/internal/: register.go  route.go
backend/test/: config_test.go  suite_test.go
charts/orbit/: Chart.yaml  (+2 more)
frontend/: .dockerignore  .gitlab-ci.yml  Dockerfile  Dockerfile.compose  Makefile  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
hack/: config.sh
sdk/python/: README.md  pyproject.toml
sdk/python/orbit/: __init__.py  checkpoint.py  client.py  deepspeed.py  export.py  fsdp.py  hf_trainer.py  jax.py  lightning.py  pytorch.py  tensorflow.py
sdk/python/tests/: test_orbit_client.py
storage/: .env
website/: .gitlab-ci.yml  Dockerfile  Makefile  README.md  README.zh-CN.md  next.config.mjs  postcss.config.mjs  source.config.ts
(+503 files in other folders)
