[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-ai-sdk"
version = "0.1.0"
description = "Lightweight Orbit experiment telemetry and checkpoint SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit*"]
